--- a/draw-shape/main.css
+++ b/draw-shape/main.css
@@ -43,6 +43,7 @@ input[type=number] {
     border-bottom: 2px solid var(--dark);
     width: 4rem;
     padding-left: 0.3rem;
+    font-size: 0.8rem;
 }
 
 input::-webkit-outer-spin-button,
@@ -55,6 +56,12 @@ input::-webkit-inner-spin-button {
     min-height: 42rem;
 }
 
+.wrapper{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
 .side-bar {
     position: absolute;
     top: 8rem;
@@ -62,6 +69,8 @@ input::-webkit-inner-spin-button {
     width: 18rem;
     background-color: var(--light);
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
 }
 
 .editor {
