--- a/doivo/main.scss
+++ b/doivo/main.scss
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500&display=swap');
+
+
+
+
 $primary-color:#2dea8f;
 $dark-primary-color:#24b273;
 $highlight-color:#167a8b;
 $dark-color:#243d44;
 $white-color:#fff;
-$font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+$font-family: 'Segoe UI',
+Tahoma,
+Geneva,
+Verdana,
+sans-serif;
 $font-medium:500;
 $font-light:300;
 $font-strong:800;
@@ -17,60 +26,53 @@ body {
     font-family: $font-family;
     font-size: 16px;
 }
-body{
+
+body {
     border-top: 3px solid $highlight-color;
 }
-.wrapper{
-    padding:0 10rem;
+
+
+.btn-custom {
+    border: none;
+    color: $dark-color;
 }
 
-a {
-    text-decoration: none;
-    color:inherit;
+@keyframes moveUpAndDown {
+    0%   {transform:translateY(0%);}
+    50% {transform:translateY(3%);}
+    100% {transform:translateY(0%);}
 }
-
-.button{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    width:8rem;
-    height:2rem;
-    border-radius: 0.4rem;
-    transition:0.3s;
-}
-
-header {
-    #action {
-        padding-top:1rem;
-        display:flex;
-        justify-content:flex-end;
-        a{
-            text-transform: capitalize;        
-            margin-left: 2rem;
-        }
-        a:hover{
-            background-color:$highlight-color;
-            color:$white-color;
-            font-weight: $font-medium;
-        }
-    }
-
-    #navigation {
-        position: fixed;
-        top:0;
-        display: flex;
-        justify-content:space-between;
-        align-items:flex-end;
-        width:100%;
-        padding:0 10rem 1.5rem 10rem;
-        box-shadow: 0 3px 6px #90fc86;
-        #logo{
-            width:10rem;   
-        }
-        nav{
-            a{
-                padding-bottom: 2rem;
+#how_to_use {
+    div {
+        div{
+            img:hover{
+                animation: moveUpAndDown 3s infinite;
             }
         }
+    }
+}
+
+
+.news_container {
+    position: relative;
+    border: 2px solid white;
+    border-top-right-radius: 2rem;
+    width:22rem;
+    height:15rem;
+    background-color: greenyellow;
+    background-position: center;
+    background-size: cover;
+    h5 {
+        display:none;
+        height: 8rem;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        color: $white-color;
+        background-image: url('./img/new-bg.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        overflow: hidden;
     }
 }
