--- a/doivo/main.scss
+++ b/doivo/main.scss
@@ -31,6 +31,23 @@ body {
     border-top: 3px solid $highlight-color;
 }
 
+h1 {
+    color: $highlight-color;
+}
+
+h1::after {
+    content: "";
+    /* This is necessary for the pseudo element to work. */
+    display: block;
+    /* This will put the pseudo element on its own line. */
+    margin: 0 auto;
+    /* This will center the border. */
+    width: 10rem;
+    /* Change this to whatever width you want. */
+    padding-top: 20px;
+    /* This creates some space between the element and the border. */
+    border-bottom: 4px solid $highlight-color;
+}
 
 .btn-custom {
     border: none;
@@ -38,14 +55,82 @@ body {
 }
 
 @keyframes moveUpAndDown {
-    0%   {transform:translateY(0%);}
-    50% {transform:translateY(3%);}
-    100% {transform:translateY(0%);}
+    0% {
+        transform: translateY(0%);
+    }
+
+    50% {
+        transform: translateY(3%);
+    }
+
+    100% {
+        transform: translateY(0%);
+    }
 }
+
+@keyframes moveUpAndDown2 {
+    0% {
+        transform: translateY(0%);
+    }
+
+    50% {
+        transform: translateY(-5%);
+    }
+
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+@keyframes moveUpAndDown3 {
+    0% {
+        transform: translateY(0%);
+    }
+
+    50% {
+        transform: translateY(15%);
+    }
+
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+@keyframes moveRight {
+    0% {
+        transform: translateX(0%);
+    }
+
+    50% {
+        transform: translateX(5%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+
+@keyframes moveLeft {
+    0% {
+        transform: translateX(0%);
+    }
+
+    50% {
+        transform: translateX(-5%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+
+
 #how_to_use {
     div {
-        div{
-            img:hover{
+        div {
+            img:hover {
                 animation: moveUpAndDown 3s infinite;
             }
         }
@@ -57,13 +142,14 @@ body {
     position: relative;
     border: 2px solid white;
     border-top-right-radius: 2rem;
-    width:22rem;
-    height:15rem;
+    width: 22rem;
+    height: 15rem;
     background-color: greenyellow;
     background-position: center;
     background-size: cover;
+
     h5 {
-        display:none;
+        display: none;
         height: 8rem;
         position: absolute;
         left: 0;
@@ -75,4 +161,129 @@ body {
         background-size: cover;
         overflow: hidden;
     }
+}
+
+#benefit {
+    .visual {
+        img:hover {
+            animation: moveUpAndDown2 3s infinite;
+        }
+    }
+
+    .bf-content {
+        padding:5rem 0;
+        div {
+            flex: 1;
+            flex-direction: column;
+
+            div {
+                padding: 1rem 2rem;
+                display: flex;
+                justify-content:flex-end;
+                align-items: center;
+            }
+
+            h3{
+                display:flex;
+                flex-direction: column;
+                justify-content:center;
+                align-items:center;
+                color: white;
+                background:#2464dbe7;
+                width:15rem;
+                height:6rem;
+                border-radius: 2px;
+                font-size: 1.3rem;
+                font-weight:400;
+                strong{
+                    font-size: 1.5rem;
+                    font-weight: 500;
+                }
+            }
+
+            img {
+                width: 7rem;
+            }
+
+            p {
+                display: inline-block;
+                max-width: 13rem;
+                color: $highlight-color;
+                font-size: 1.3rem;
+                font-weight: 500;
+                text-shadow: 0 1px 2px rgb(79, 112, 204);
+                margin:0 3rem;
+
+            }
+        }
+
+        .bf-left-side {
+            padding-right: 1.5rem;
+            div {
+                flex-direction: row;
+                p{
+                    direction:rtl;
+                }
+                img:hover{
+                    animation: moveLeft 0.5s  ;
+                }
+            }
+        }
+
+        .bf-right-side {
+            padding-left: 1.5rem;
+            div {
+                flex-direction: row-reverse;
+            }
+            img:hover{
+                animation: moveRight 0.5s  ;
+            }
+
+        }
+    }
+
+
+}
+
+#other_service {
+    img:hover {
+        animation: moveUpAndDown3 2s infinite;
+    }
+
+    .content {
+        transition: 0.3s;
+
+        h4 {
+            color: $highlight-color;
+        }
+    }
+
+    .content:hover {
+        background-color: #5fd0e965;
+    }
+}
+
+#contact {
+    color: $white-color;
+
+    .left_side {
+        background: rgb(209, 71, 209);
+        min-height: 10rem;
+       
+    }
+
+    .right_side {
+        background: rgb(110, 44, 110);
+        min-height: 10rem;
+        
+        p {
+            display: none;
+        }
+
+    }
+}
+
+footer {
+    background-color: #2358bb;
+    min-height: 20rem;
 }
