--- a/doivo/main.css
+++ b/doivo/main.css
@@ -95,6 +95,14 @@ p {
     transform: translateX(0%);
   }
 }
+@keyframes clickBtn {
+  50% {
+    transform: translateY(5px);
+  }
+}
+#page-header a {
+  font-size: 2rem;
+}
 #page-header nav a {
   font-size: 1.2rem;
 }
@@ -119,6 +127,28 @@ p {
 
 .page-vid {
   border-radius: 2rem;
+}
+
+.my_btn {
+  text-decoration: none;
+  height: 3rem;
+  width: 8rem;
+  transform: skew(-20deg);
+  color: white;
+  background: #0052D4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 10px 10px 2px #042c6d;
+  transition: 0.3s;
+  user-select: none;
+}
+
+.my_btn:hover {
+  color: white;
+  box-shadow: 0px 0px 0px #042c6d;
+  transform: translateX(10px);
+  transform: translateY(10px);
 }
 
 #how_to_use div div img:hover {
@@ -167,9 +197,6 @@ p {
 
 #benefit .visual img:hover {
   animation: moveUpAndDown2 3s infinite;
-}
-#benefit .bf-content {
-  padding: 5rem 0;
 }
 #benefit .bf-content div {
   flex: 1;
@@ -262,9 +289,8 @@ p {
   display: none;
 }
 
-footer {
-  background-color: #2358bb;
-  min-height: 20rem;
+footer p {
+  color: #fff;
 }
 
 @media all and (min-width: 760px) {
