--- a/daily/main.scss
+++ b/daily/main.scss
@@ -1,12 +1,12 @@
-$red :#ff4a56;
-$grey :#646464;
-$white :#ffffff;
-$dark :#243d44;
-$blue :#167a8b;
-$background:#f5f5f5;
-$md:768px;
-$lg:992px;
-$xl:1200px;
+$red: #ff4a56;
+$grey: #646464;
+$white: #ffffff;
+$dark: #243d44;
+$blue: #167a8b;
+$background: #f5f5f5;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
 
 *,
 html,
@@ -15,16 +15,17 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
     color: $grey;
     &::-webkit-scrollbar {
         width: 4px;
     }
-    
+
     &::-webkit-scrollbar-thumb {
         background-color: $red;
     }
-    
+
     &::-webkit-scrollbar-thumb:hover {
         background: darken($red, 5);
     }
@@ -35,7 +36,7 @@ body {
 }
 a {
     text-decoration: none;
-    &:hover{
+    &:hover {
         color: initial;
     }
 }
@@ -49,8 +50,7 @@ a {
     padding-right: 0.5rem;
 }
 
-input[type=search]::-webkit-search-cancel-button {
-
+input[type="search"]::-webkit-search-cancel-button {
     -webkit-appearance: none;
     height: 1rem;
     width: 1rem;
@@ -60,9 +60,8 @@ input[type=search]::-webkit-search-cancel-button {
     background-size: cover;
 }
 
-
 // component
-.product_list{
+.product_list {
     white-space: nowrap;
     overflow: auto;
     &::-webkit-scrollbar {
@@ -72,11 +71,20 @@ input[type=search]::-webkit-search-cancel-button {
         border-radius: 10px;
         background-color: lighten($color: $red, $amount: 15);
     }
-    
+
     &::-webkit-scrollbar-thumb:hover {
         background: darken($red, 5);
     }
 }
+.product_list_vertical {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    .product {
+        margin-bottom: 16px;
+    }
+}
+
 .product {
     display: inline-block;
     position: relative;
@@ -85,11 +93,6 @@ input[type=search]::-webkit-search-cancel-button {
     height: 173px;
     color: $grey;
     transition: 0.3s;
-
-    &:hover{
-        box-shadow:  0 8px 16px rgba(#000, .175);
-        transform: scale(1.1);
-    }
 
     img {
         width: 100%;
@@ -100,77 +103,114 @@ input[type=search]::-webkit-search-cancel-button {
         font-size: 12px;
         margin: 0;
         white-space: initial;
-        
     }
-    .left_side,.right_side {
+    .left_side,
+    .right_side {
         padding: 0;
         margin: 0;
     }
-    .right_side{
+    .right_side {
         p {
             text-align: end;
         }
-        :first-child{
+        :first-child {
             font-size: 10px;
             text-decoration: line-through;
             color: $blue;
-        }   
-        :last-child{
+        }
+        :last-child {
             font-weight: 500;
             color: $red;
         }
     }
-    .discount{
+    .discount {
         position: absolute;
         top: 5px;
         right: 6px;
         color: $red;
     }
+
+    .product_info {
+        position: absolute;
+        top: 0;
+        right: -15.5rem;
+        width: 15rem;
+        background-color: $white;
+        transition: 0.3s;
+        transform: scale(0);
+        button {
+            color: $white;
+            background-color: $red;
+            &:hover {
+                background-color: darken($color: $red, $amount: 10);
+            }
+        }
+    }
+}
+.product_container {
+    justify-content: space-around;
 }
 
+.product_lg {
+    width: 160px !important;
+    height: 200px !important;
+    img {
+        height: 142px !important;
+    }
+}
 
-@media (min-width:$md) {
-    .product{
-        width: 120px*1.2;
-        height: 173px*1.2;
-        img{
-            height: 132px*1.2;
+@media (min-width: $lg) {
+    .product:hover {
+        box-shadow: 0 8px 16px rgba(#000, 0.175);
+        transform: scale(1.1) translateX(-3rem);
+        .product_info {
+            transform: scale(1);
         }
-        p{
+    }
+    .product_container {
+        flex-direction: row-reverse;
+        padding: 0 6rem;
+    }
+}
+
+@media (min-width: $md) {
+    .product {
+        width: 120px * 1.2;
+        height: 173px * 1.2;
+        img {
+            height: 132px * 1.2;
+        }
+        p {
             font-size: 14px;
         }
-        .right_side{
+        .right_side {
             p {
                 text-align: end;
             }
-            :first-child{
+            :first-child {
                 font-size: 12px;
                 text-decoration: line-through;
                 color: $blue;
-            }   
-            :last-child{
+            }
+            :last-child {
                 margin-top: 2px;
                 font-size: 16px;
                 font-weight: 500;
                 color: $red;
             }
         }
-        
     }
-    
 }
 
 // component
 
 header {
-
     position: fixed;
     z-index: 10000;
     width: 100%;
-    top:0;
+    top: 0;
     .sub_header {
         background-color: $red;
-
 
         .left_side {
             a {
@@ -182,7 +222,6 @@ header {
             a {
                 margin-left: 0.5rem;
             }
-
         }
 
         a {
@@ -202,7 +241,7 @@ header {
         }
 
         .nav-item {
-            @media (min-width:990px) {
+            @media (min-width: 990px) {
                 &:hover {
                     .dropdown-menu {
                         display: block;
@@ -211,13 +250,10 @@ header {
             }
 
             .dropdown-menu {
-                transition: 0.3s;
             }
         }
 
-
         div {
-        
             button {
                 background-color: $red;
 
@@ -255,7 +291,6 @@ header {
                     width: 1.2rem;
                 }
             }
-
         }
     }
 
@@ -290,25 +325,29 @@ header {
     }
 }
 
+footer {
+    background: $red;
+    min-height: 20rem;
+    width: 100%;
+    margin-top: 5rem;
+}
 
 .flash_sale {
     background-color: $red;
 }
-.slider {
+.first_component {
     margin-top: 3rem;
 
-    @media (min-width:$md) {
-        margin-top:3.5rem;
+    @media (min-width: $md) {
+        margin-top: 3.5rem;
     }
 
-    @media (min-width:$lg) {
+    @media (min-width: $lg) {
         margin-top: 8rem;
     }
-
 }
 
 // animation //
-
 
 @keyframes up_and_down {
     0% {
@@ -322,4 +361,9 @@ header {
     100% {
         transform: translateY(0);
     }
+}
+
+//header active //
+.active {
+    border-bottom: 3px solid $red;
 }
